# SolarSystemViewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  readme.md
.github/workflows/: cmake_vcpkg.yml
assets/scenes/: galaxy.json  sol.json  sol_low_res.json  sol_particle.json  testing.json
assets/shaders/: colorCorrection.fs  colorCorrection.vs  default.fs  default.vs  depthShader.fs  depthShader.vs  guiShader.fs  guiShader.vs  particle.fs  particle.vs  phong.fs  phong.vs  postProcessing.fs  postProcessing.vs  skyboxShader.fs  skyboxShader.vs  testing.fs  testing.vs  textShader.fs  textShader.vs
assets/shaders/compute/: applyBloom.comp  bloom_blur.comp  bloom_blur_upsample.comp  bloom_downsample.comp  bloom_luminancePass.comp  calculateLuminance.comp  calculateModel.comp  calculateModelView.comp
assets/shaders/compute/physics/: brute_force_copy_result_gpu.comp  brute_force_gpu.comp  build_quad_tree.comp  build_quad_tree_multi.comp  clear_quad_tree.comp  clear_quad_tree_multi.comp  sort_bodies_quad_tree.comp  sum_forces_quad_tree.comp  sum_forces_quad_tree_multi.comp  sum_mass_quad_tree.comp  sum_mass_quad_tree_multi.comp
lib/: stb_image_write.h
shaders/: depthShader.fs  depthShader.vs  phong.fs
src/: config.cpp  config.h  inputController.cpp  inputController.h  main.cpp  meshImporter.cpp  meshImporter.h  meshManager.cpp  shaderImporter.cpp  shaderImporter.h  shaderManager.cpp  shaderManager.h  util.h
src/GravBody/: GravBody.h
src/camera/: camera.cpp  camera.h
src/game/: gameController.cpp  gameController.h
src/graphics/gui/: gui.cpp  gui.h
src/graphics/light/: light.cpp  light.h
src/graphics/mesh/: meshImporter.cpp  meshImporter.h  meshManager.cpp  meshManager.h
src/graphics/object/: object.cpp  object.h
src/graphics/screen/: screenManager.cpp  screenManager.h
src/graphics/shader/: shaderManager.cpp  shaderManager.h
src/graphics/skybox/: skybox.cpp  skybox.h
src/graphics/texture/: textureManager.cpp  textureManager.h  textureMod.cpp  textureMod.h
src/input/: inputController.cpp  inputController.h
src/mesh/: mesh.cpp  mesh.h  meshImporter.cpp  meshImporter.h
src/physics/: gravBody.cpp  gravBody.h  system.cpp  system.h
src/physics/QuadTree/: Boundary.cpp  Boundary.h  QuadTree.cpp  QuadTree.h
src/physics/QuadTreeGPU/: quadTreeStructs.h  quadTreeUtil.cpp  quadTreeUtil.h
src/scene/: scene.cpp  scene.h
src/tests/: GPUQuadTree_tests.h  quadTreeStructs.h  quadTreeUtil.h  tests.h
util/galaxyCreator/: galaxy.json  package.json  systemGen.js
util/topoToNormal/: package-lock.json  package.json  pnpm-lock.yaml  topoToNormal.js
